base for testing api module
